# Spent

./: README.md  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
AUR/: .SRCINFO  PKGBUILD  PKGBUILD-bin
scripts/: sync-version.js  version.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/lib/: Analytics.svelte  CategoryManager.svelte  CommandPalette.svelte  ContainerManager.svelte  Dashboard.svelte  Dropdown.svelte  EditTransaction.svelte  ImportCSV.svelte  Overview.svelte  QuickEntry.svelte  Settings.svelte  Toast.svelte  TransactionList.svelte  stores.ts
