[package]
name = "spent-app"
version = "1.1.6"
description = "A minimalist, local-first personal finance tracker"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
csv = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = { version = "0.31" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
